ta-connector/main/default/objects/TotalAgility_System_Configurations__c/fields/Log_Cleanup_Cutoff_Days__c.field-meta.xml
<CustomField>
    <fullName>Log_Cleanup_Cutoff_Days__c</fullName>
    <label>Job Log Clean up Cutoff Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>