ta-connector/main/default/objects/TotalAgility_System_Configurations__c/fields/Log_Job_inbound_and_outbound_Requests__c.field-meta.xml
<CustomField>
    <fullName>Log_Job_inbound_and_outbound_Requests__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Log Job inbound and outbound  Requests</label>
    <type>Checkbox</type>
</CustomField>