ta-connector/main/default/objects/TotalAgility_System_Configurations__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <label>Session ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>