ta-connector/main/default/objects/TotalAgility_System_Configurations__c/fields/Total_Agility_End_point_URL__c.field-meta.xml
<CustomField>
    <fullName>Total_Agility_End_point_URL__c</fullName>
    <label>Total Agility End point URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>